# instant-python-monitoring

./: README.md  docker-compose.yml  ipy.yml  makefile  mypy.ini  pyproject.toml
.github/actions/python_setup/: action.yml
.github/workflows/: lint.yml  test.yml
config/grafana/provisioning/datasources/: loki.yml
config/loki/: config.yml
scripts/: add_dependency.py  local_setup.py  remove_dependency.py
scripts/hooks/: post-merge.py  pre-commit.py  pre-push.py
src/delivery/api/: application.py
src/driven/for_sending_usage/: loki_client.py
src/driving/: api_response.py  application.py
src/driving/api/: application.py
src/driving/v1/: routes.py
src/driving/v1/for_registering_usage/: register_usage_router.py
src/infra/http/: http_response.py
src/infra/logger/: logger.py
src/monitoring/driven/for_sending_usage/: for_sending_usage.py
src/monitoring/driving/for_registering_usage/: register_usage_command.py  usage_registrar.py
src/monitoring/driving/http/: http_response.py  status_code.py
src/monitoring/driving/logger/: json_formatter.py  logger.py
src/monitoring/shared/errors/: domain_error.py  (+2 more)
src/monitoring/usage/: command.py  command_not_available.py  invalid_version_format.py  missing_template_keys.py  platform.py  template_data.py  usage_information.py  version.py
test/: random_generator.py
test/driven/for_sending_usage/: loki_test_container.py  test_loki_client_integration.py
test/monitoring/usage/: command_primitives_mother.py  test_command.py  test_template_data.py  test_version.py  usage_information_primitives_mother.py
(+7 files in other folders)
