[project]
name = "instant-python-monitoring"
version = "0.1.0"
description = "Backend application to log and monitor command usage of instant-python Python library"
authors = [{name = "dimanu-py", email = "dimanu.py@gmail.com"}]
dependencies = [
    "fastapi[standard]",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { file = "LICENSE" }


[dependency-groups]
lint = [
    "mypy",
    "ruff",
]
test = [
    "doublex>=1.9.6.1",
    "expects>=0.9.0",
    "faker>=37.4.0",
    "pytest",
    "pytest-asyncio>=0.25.2",
    "testcontainers>=4.10.0",
]
